# QOsc

./: .gitignore  CMakeLists.txt
.github/workflows/: ccpp.yml
include/: QOscTcpInterface  QOscUdpInterface  qosc.h  qosctcpinterface.h  qoscudpinterface.h
src/: CMakeLists.txt  qosc_global.cpp  qoscbundle.cpp  qoscbundle_p.h  qoscinterface.cpp  qoscinterface.h  qoscmessage.cpp  qoscmessage_p.h  qoscmethod.cpp  qoscmethod.h  qosctcpinterface.cpp  qosctcpinterface.h  qoscudpinterface.cpp  qoscvalue.cpp  qoscvalue_p.h
tests/interface/: tst_interface.cpp
